# SpMV-Comm-Strats

./: .gitignore  README.md  jobscript  run.sh
P2/: .gitignore  1138_bus.mtx  CMakeLists.txt  LFAT5.mtx  bcspwr01.mtx  callgrind.out.448642  callgrind.out.448643  callgrind.out.448644  callgrind.out.448645  compile_commands.json  experiments.md  mycielskian4.mtx  nlpkkt200_4_nodes_1_tasks_16_threads-713244-stdout.txt  test.mtx  test.sh  todo.md
P2/a10/: 1_16_1  1_1_1  1_1_16  1_2_1  1_4_1  1_8_1  2_16_1  2_1_1  2_1_16  4_16_1  4_1_1  4_1_16  8_16_1  8_1_1  8_1_16
P2/a12/: 1_16_1  1_1_1  1_1_16  1_1_2  1_1_4  1_1_8  1_2_1  1_4_1  1_8_1  2_1_1  2_1_16  4_1_1  4_1_16  8_1_1
P2/b12/: 1_16_1  1_1_1  1_1_16  1_1_2  1_1_4  1_1_8  1_2_1  1_4_1  1_8_1  2_16_1  2_1_1  2_1_16  4_16_1  4_1_1  4_1_16
P2/d12/: 1_16_1  1_1_1  1_1_16  1_1_2  1_1_4  1_1_8  1_2_1  1_4_1  1_8_1  2_16_1  2_1_1  2_1_16  4_16_1  4_1_1  4_1_16
P2/errors/: error.txt
P2/results/: defq.txt  fpgaq.txt  nlpkkt160_1_nodes_1_tasks_48_threads-689254-stderr.txt  nlpkkt160_1_nodes_1_tasks_48_threads-689254-stdout.txt  nlpkkt160_2_nodes_1_tasks_48_threads-689255-stderr.txt  nlpkkt160_2_nodes_1_tasks_48_threads-689255-stdout.txt  nlpkkt160_3_nodes_1_tasks_48_threads-689256-stderr.txt  nlpkkt160_3_nodes_1_tasks_48_threads-689256-stdout.txt  nlpkkt160_4_nodes_1_tasks_48_threads-689257-stderr.txt  nlpkkt160_4_nodes_1_tasks_48_threads-689257-stdout.txt  plot.py  plot2.py  rome16q.txt  t.txt
P2/results/new/: rename.sh
P2/results/test_rome/: Bump_2911_1_nodes_1_tasks_16_threads-689303-stderr.txt  Bump_2911_1_nodes_1_tasks_16_threads-689303-stdout.txt  Bump_2911_2_nodes_1_tasks_16_threads-689304-stderr.txt  Bump_2911_2_nodes_1_tasks_16_threads-689304-stdout.txt  Bump_2911_3_nodes_1_tasks_16_threads-689305-stderr.txt  Bump_2911_3_nodes_1_tasks_16_threads-689305-stdout.txt  Bump_2911_4_nodes_1_tasks_16_threads-689306-stderr.txt  Bump_2911_5_nodes_1_tasks_16_threads-689307-stderr.txt  Bump_2911_6_nodes_1_tasks_16_threads-689308-stderr.txt  Bump_2911_7_nodes_1_tasks_16_threads-689309-stderr.txt  Bump_2911_8_nodes_1_tasks_16_threads-689310-stderr.txt  Bump_2911_8_nodes_1_tasks_16_threads-689310-stdout.txt  Cube_Coup_dt0_1_nodes_1_tasks_16_threads-689319-stderr.txt  Cube_Coup_dt0_1_nodes_1_tasks_16_threads-689319-stdout.txt  Cube_Coup_dt0_2_nodes_1_tasks_16_threads-689320-stderr.txt  Cube_Coup_dt0_2_nodes_1_tasks_16_threads-689320-stdout.txt  Cube_Coup_dt0_3_nodes_1_tasks_16_threads-689321-stderr.txt  Cube_Coup_dt0_3_nodes_1_tasks_16_threads-689321-stdout.txt  Cube_Coup_dt0_4_nodes_1_tasks_16_threads-689322-stderr.txt  Cube_Coup_dt0_5_nodes_1_tasks_16_threads-689323-stderr.txt  Cube_Coup_dt0_6_nodes_1_tasks_16_threads-689324-stderr.txt  Cube_Coup_dt0_7_nodes_1_tasks_16_threads-689325-stderr.txt  Cube_Coup_dt0_8_nodes_1_tasks_16_threads-689326-stderr.txt  Cube_Coup_dt0_8_nodes_1_tasks_16_threads-689326-stdout.txt  Cube_Coup_dt6_1_nodes_1_tasks_16_threads-689311-stderr.txt  Cube_Coup_dt6_1_nodes_1_tasks_16_threads-689311-stdout.txt  Cube_Coup_dt6_2_nodes_1_tasks_16_threads-689312-stderr.txt  Cube_Coup_dt6_2_nodes_1_tasks_16_threads-689312-stdout.txt  Cube_Coup_dt6_3_nodes_1_tasks_16_threads-689313-stderr.txt  Cube_Coup_dt6_3_nodes_1_tasks_16_threads-689313-stdout.txt  Cube_Coup_dt6_4_nodes_1_tasks_16_threads-689314-stderr.txt  Cube_Coup_dt6_5_nodes_1_tasks_16_threads-689315-stderr.txt  (+156 more)
P2/scripts/: .output2.txt.swp  DIMACS.txt  Lynx.txt  aarch_test.sh  bone.txt  bone010.txt  cube.txt  defq_test.sh  del.txt  envsetup-ex3-rome16q.sh  fpgaq_test.sh  huge.txt  launch1adefq.sh  launch1afpgaq.sh  launch1afpgaq_old.sh  launch1arome.sh  launch1aslowq.sh  launch1bdefq.sh  launch1bfpgaq.sh  launch1brome.sh  launch1bslowq.sh  launch1cdefq.sh  launch1cfpgaq.sh  launch1crome.sh  launch1cslowq.sh  launch1ddefq.sh  launch1dfpgaq.sh  launch1drome.sh  launch1dslowq.sh  launch_all.sh  launchfpgaq.sh  milan_test.sh  one_mat.txt  output.txt  output2.txt  plot.py  rome_test.sh  run_tests.sh  shell.txt  slowq_test.sh  (+1 more)
P2/scripts/lynx_scripts/: launch1a.sh  (+5 more)
P2/src/: 1a.c  compile_commands.json  main.c  main_x11.c  mtx.c  mtx.h  option0.c  option1a.c  option1a_p.c  option1b.c  option1b_old.c  option1c.c  option1d.c  p2.c  p2.h  spmv.c  spmv.h  test.c  test_bcast.c
P3/: CMakeLists.txt  Hamrle1.mtx  compile_commands.json  jobscript  test.mtx
P3/include/: mtx.h  spmv.h
P3/src/: main_dist.c  main_distributed.c  main_shared.c  mtx.c  seq_main.c  spmv.c
(+23883 files in other folders)
